[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "proofnet-sdk"
version = "0.1.2"
description = "Client helpers for Proofnet BTC API (:25556) and ProofWallet (:9756)"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
